# spectral_lib_builder

./: .gitignore  README.md  clean_empty.py  clean_output.py  dirty_cfm.md  environment.yml  fragment_mols.py  prepare_mols.py  pyproject.toml  typescript
coconut_data/bash_files/: Bash_Coconut_0000.sh  Bash_Coconut_0001.sh
lotus_data/: LOTUS_DNP_ISDB_fragged.txt  bash_lotus_template.sh
npatlas_data/: list_mgf.txt  unfragged_list.txt
npatlas_data/bash_files/: Bash_npatlas_0000000.sh  Bash_npatlas_0000001.sh  Bash_npatlas_0000002.sh  Bash_npatlas_0000003.sh  Bash_npatlas_0000004.sh  Bash_npatlas_0000005.sh  Bash_npatlas_0000006.sh  Bash_npatlas_0000007.sh  Bash_npatlas_0000008.sh  Bash_npatlas_0000009.sh  Bash_npatlas_0000010.sh  Bash_npatlas_0000011.sh  (+14 more)
open_np_db_data/: bash_opennpdb_template.sh
scripts/: coconut_subsetter.R  concat.sh  dirty_cfm.md  frag_list_preparator.py  global_launch_coconutfrag.sh  global_launch_lotus.sh  global_launch_npatlas.sh  global_launch_openpdb.sh  increment_coconut_bash.sh  increment_lotus_bash.sh  increment_npatlas_bash.sh  increment_opennpdb_bash.sh  log2mgf.py  lotus2cfm.R  lotus2cfm.py  mgf_header_populater.py  mgf_header_populater_lotus.py  mgf_header_populater_lotus_recursive.py  populate_headers.py  prepare_headers.py  raw_log_treater.py  raw_log_treater_nocrush.py  raw_log_treater_nocrush_maxer.py  raw_log_treater_nocrush_meaner.py  raw_log_treater_nocrush_summer.py  run_cfm.sbatch  run_cfm.sh  run_cfm_neg.sbatch  run_cfm_neg.sh  run_cfm_test.sbatch  run_cfm_test.sh  table_adducter.py  table_adducter_from_emass_script.py  table_adducter_frominchi_script.py  table_adducter_npatlas.py  table_adducter_npatlas_script.py  table_adducter_opennp_script.py  table_adducter_script.py  table_comparater_rdkit.py  table_comparator.py  (+3 more)
(+491 files in other folders)
