[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "default"
version = "0.0.1"
description = "My default environment."
authors = [
    {name = "Adriano Rutz", email = "adafede@gmail.com"},
]
package-mode = false
requires-python = "<3.13.0,>=3.12.0"
dependencies = [
    "aiofiles<25.0.0,>=24.1.0",
    "asyncio<4.0.0,>=3.4.3",
    "matchms<1.0.0,>=0.28.2",
    "polars<2.0.0,>=1.21.0",
    "rdkit<2025.0.0,>=2024.9.4", # blocked because of matchms
    "tqdm<5.0.0,>=4.67.1",
]

[tool.pdm.build]
includes = []
